bigger margin to make sure partner logo does not overlap title

--- a/liqd_product/assets/scss/components/_project_header.scss
+++ b/liqd_product/assets/scss/components/_project_header.scss
@@ -48,7 +48,7 @@
 }
 
 .project-header__title {
-    margin-top: 0.3rem;
+    margin-top: 1rem;
     margin-bottom: 1.2rem;
     font-size: $font-size-xl;
 
